--- a/README.mustache
+++ b/README.mustache
@@ -56,7 +56,7 @@ for(var i = 0, imax = rectangles.length ; i < imax ; i++) {
 	var rect = rectangles[i];
 
 	//do something like :
-	//DrawRectangle(rect.x, rect.y, block.w, block.h);
+	//DrawRectangle(rect.x, rect.y, rect.w, rect.h);
 }
 
 ```
