--- a/README.mustache
+++ b/README.mustache
@@ -66,8 +66,8 @@ Valid sort methods
 
 {{& sortMethods}}
 
-Credentials
------------
+Credits
+-------
 
 The packing algorithm is from [here](https://github.com/jakesgordon/bin-packing)
 
