--- a/README.mustache
+++ b/README.mustache
@@ -38,15 +38,29 @@ var GrowingPacker = require('{{& package.name}}')
 var packer = new GrowingPacker({
 	//sortMethod: a sort method or a valid sort method name, default to maxside
 
+	/*
 	blocks: [
 		{ w: 100, h: 100 },
 		{ w: 100, h: 100 },
 		{ w:  80, h:  80 },
 		{ w:  80, h:  80 }
 	]
+	*/ blocks is optional and can be passed directly to the pack method
 });
 
-packer.pack();
+var pack = packer.pack();
+
+// or
+
+var packer = new GrowingPacker();
+var pack = packer.pack([
+	{ w: 100, h: 100 },
+	{ w: 100, h: 100 },
+	{ w:  80, h:  80 },
+	{ w:  80, h:  80 }
+]);
+
+// then
 
 console.log(pack.width, pack.height);
 
@@ -71,4 +85,4 @@ Credits
 
 The packing algorithm is from [here](https://github.com/jakesgordon/bin-packing)
 
-I just wrap it in a custom API (including the sort methods proposed by [Jakes Gordon](https://github.com/jakesgordon) ) and make it accesible via npm since [that issue](https://github.com/jakesgordon/bin-packing/issues/1) is still opened.
+I just wrap it in a custom API (including the sort methods proposed by [Jake Gordon](https://github.com/jakesgordon) ) and make it accesible via npm since [that issue](https://github.com/jakesgordon/bin-packing/issues/1) is still opened.
