--- a/README.mustache
+++ b/README.mustache
@@ -45,7 +45,7 @@ var packer = new GrowingPacker({
 		{ w:  80, h:  80 },
 		{ w:  80, h:  80 }
 	]
-	*/ blocks is optional and can be passed directly to the pack method
+	blocks is optional and can be passed directly to the pack method */
 });
 
 var pack = packer.pack();
